--- a/stable/logstash/templates/statefulset.yaml
+++ b/stable/logstash/templates/statefulset.yaml
@@ -130,9 +130,12 @@ spec:
         - name: patterns
           configMap:
             name: {{ template "logstash.fullname" . }}-patterns
-        - name: pipeline
+        - name: pipelines
           configMap:
-            name: {{ template "logstash.fullname" . }}-pipeline
+            name: {{ template "logstash.fullname" . }}-pipelines
+        - name: pipeline-settings
+          configMap:
+            name: {{ template "logstash.fullname" . }}-pipeline-settings
     {{- with .Values.volumes }}
 {{ toYaml . | indent 8 }}
     {{- end }}
