--- a/stable/logstash/values.yaml
+++ b/stable/logstash/values.yaml
@@ -116,7 +116,7 @@ livenessProbe:
   httpGet:
     path: /
     port: monitor
-  initialDelaySeconds: 20
+  initialDelaySeconds: 150
   # periodSeconds: 30
   # timeoutSeconds: 30
   # failureThreshold: 6
@@ -126,7 +126,7 @@ readinessProbe:
   httpGet:
     path: /
     port: monitor
-  initialDelaySeconds: 20
+  initialDelaySeconds: 150
   # periodSeconds: 30
   # timeoutSeconds: 30
   # failureThreshold: 6
@@ -145,13 +145,18 @@ persistence:
   accessMode: ReadWriteOnce
   size: 2Gi
 
+pipelinesPath: /usr/share/logstash/pipelines
+
 volumeMounts:
   - name: data
     mountPath: /usr/share/logstash/data
   - name: patterns
     mountPath: /usr/share/logstash/patterns
-  - name: pipeline
-    mountPath: /usr/share/logstash/pipeline
+  - name: pipelines
+    mountPath: /usr/share/logstash/pipelines
+  - name: pipeline-settings
+    mountPath: /usr/share/logstash/config/pipelines.yml
+    subPath: pipelines.yml
 
 volumes: []
   # - name: tls
@@ -200,16 +205,10 @@ elasticsearch:
   port: 9200
 
 ## ref: https://github.com/elastic/logstash-docker/blob/master/build/logstash/env2yaml/env2yaml.go
+## ref: https://www.elastic.co/guide/en/logstash/current/dir-layout.html#docker-layout
 config:
   config.reload.automatic: "true"
-  path.config: /usr/share/logstash/pipeline
   path.data: /usr/share/logstash/data
-
-  ## ref: https://www.elastic.co/guide/en/logstash/current/persistent-queues.html
-  queue.checkpoint.writes: 1
-  queue.drain: "true"
-  queue.max_bytes: 1gb  # disk capacity must be greater than the value of `queue.max_bytes`
-  queue.type: persisted
 
 ## Patterns for filters.
 ## Each YAML heredoc will become a separate pattern file.
@@ -217,57 +216,35 @@ patterns:
   # main: |-
   #   TESTING {"foo":.*}$
 
-## NOTE: To achieve multiple pipelines with this chart, current best practice
-## is to maintain one pipeline per chart release. In this way configuration is
-## simplified and pipelines are more isolated from one another.
+pipelineSettings:
+  alpha:
+    pipeline.workers: 1
+    queue.type: persisted
 
-inputs:
-  main: |-
+pipelines:
+  alpha: |
     input {
-      # udp {
-      #   port => 1514
-      #   type => syslog
-      # }
-      # tcp {
-      #   port => 1514
-      #   type => syslog
-      # }
-      beats {
-        port => 5044
+      tcp {
+        port => 1514
+        type => syslog
       }
-      # http {
-      #   port => 8080
-      # }
-      # kafka {
-      #   ## ref: https://www.elastic.co/guide/en/logstash/current/plugins-inputs-kafka.html
-      #   bootstrap_servers => "kafka-input:9092"
-      #   codec => json { charset => "UTF-8" }
-      #   consumer_threads => 1
-      #   topics => ["source"]
-      #   type => "example"
-      # }
     }
-
-filters:
-  # main: |-
-  #   filter {
-  #   }
-
-outputs:
-  main: |-
+    filter {
+      ruby { code => "puts; puts 'from alpha filter: '; puts event" }
+    }
     output {
-      # stdout { codec => rubydebug }
-      elasticsearch {
-        hosts => ["${ELASTICSEARCH_HOST}:${ELASTICSEARCH_PORT}"]
-        manage_template => false
-        index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
-        document_type => "%{[@metadata][type]}"
+      stdout {}
+    }
+  gold: |
+    input {
+      tcp {
+        port => 1515
+        type => syslog
       }
-      # kafka {
-      #   ## ref: https://www.elastic.co/guide/en/logstash/current/plugins-outputs-kafka.html
-      #   bootstrap_servers => "kafka-output:9092"
-      #   codec => json { charset => "UTF-8" }
-      #   compression_type => "lz4"
-      #   topic_id => "destination"
-      # }
+    }
+    filter {
+      ruby { code => "puts; puts 'from gold filter: '; puts event" }
+    }
+    output {
+      stdout {}
     }
